--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
@@ -25,6 +27,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^11.7.3",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
@@ -35,6 +39,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.4.6",
     "react-router": "^7.6.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
